- fixed an issue that one you used an authenticated service, but did not supply credentials, we would send
  an empty authentication header.
- added Captcha Handling and more detailed exceptions when the authentication 
  request fails. See authexceptions.cs for the list of potential exceptions thrown
- added some preliminary unittests for the new exceptions

== 1.0.9.4 ==
- Google Base: fix for incorrect Price attribute behaviour
- Google Base: fix for incorrectly persisting duplicate attributes
- Fix for Content.Type having no default value (issue 41)
- Fix for Content.Type="text/html" parsing incorrectly. The strict check for type="text" is now relaxed to be type="text*", 
  so all text subtypes will be treated the same
- Fix for Content.Type = "html" and "text/html" persistence. What the code does now is: first HTMLDecode the value held, than
  run the standard XMLWriter.WriteString over it (which does HTML encoding). This seems to work fine. 
- Added the gm:stats tags to the Windows Mobile build, accidently forgot to change that project file
- the calendarfeed discarded entries unknown to it in the calendar namespace. This is fixed now. Unknown entries to the parser 
  are now correctly added to the extension elements.
- added the return-empty parameter to the cellquery class
- added URL encoding to the authentication parameters (username/passwords etc that had unallowed FORM post chars caused failed login
  attempts)




== 1.0.9.3 ==
- Google Base changes:
  New features:
    - GBaseQuery supports the following optional parameters; orderby, sortorder, refine and content
    - Support for gm:stats tags
    - GBaseUriFactory can now generate the feed uri of other customers
     
    Fixes:
     - Fixed the GBaseAttributeType hierarchy for date/dateTime/dateTimeRange
     - Fixed the type of the hardcoded ExpirationDate property in GBaseAttributes
- Added a Makefile for Mono builds. This one replaces the Ant file. 	

== 1.0.9.2 == 